FIX fixed some layout problems p2 and refactor movieDetail

--- a/movies_lib_app/src/pages/detail/detail.scss
+++ b/movies_lib_app/src/pages/detail/detail.scss
@@ -19,7 +19,7 @@
 		left: 0;
 		right: 0;
 		z-index: 999;
-		opacity: 0.5;
+		opacity: 0.7;
 		background: linear-gradient(
 			to bottom, 
 			#FFF0 0%,
