--- a/movies_lib_app/src/shared/components/card/card.scss
+++ b/movies_lib_app/src/shared/components/card/card.scss
@@ -2,7 +2,7 @@
 
 .card {
 	&__wrapper {
-		@include mx.setFlex(column, nowrap, unset, unset);
+		@include mx.setFlex(column, nowrap, unset, center);
 		max-width: 150px;
 	}
 	&__poster {
@@ -12,7 +12,7 @@
 		background-color: var(--grey-default);
 
 		@media screen and (max-width: 349.99px) {
-			width: 135px;
+			width: 140px;
 		}
 		
 		&-img {
@@ -22,18 +22,18 @@
 		}
 	}
 	&__data {
-		margin: 10px 0;
+		margin: 10px 0 0 10px;
 		font-size: 0.8rem;
 	}
 	&__title {
 		@include mx.textEllipsis;
 		margin: 0;
 		font-weight: 500;
+		color: darken($color: #8B8B8B, $amount: 10);
 	}
 	&__info {
 		display: grid;
 		grid-template-columns: 0.5fr 0.2fr 0.3fr;
-		margin: 5px 0;
 		font-size: 0.7rem;
 		font-weight: 500;
 		color: var(--grey-dark);
@@ -41,7 +41,5 @@
 		&-genres {
 			@include mx.textEllipsis;
 		}
-		&-nation {}
-		&-year {}
 	}
 }
